# mathematical_function

./: README.md  pyproject.toml
mathematical_function/: main.py
mathematical_function/polygons/: polygon.py  rectangle.py  square.py
tests/: scripts.py  test_main.py
tests/polygons/: test_rectangle.py  test_square.py
