[tool.poetry]
name = "mathematical-function"
version = "0.1.0"
description = ""
authors = ["Melissa Celi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"


[tool.poetry.group.test.dependencies]
coverage = "^7.4.4"


[tool.poetry.scripts]
script = "mathematical_function.main:main"
test = 'tests.scripts:test'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
